--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -4,19 +4,51 @@
   box-sizing: content-box;
 }
 
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
 .main {
   width: 100%;
   height: 100vh;
-  // position: relative;
   display: flex;
 
   .side-bar {
     width: 300px;
-    height: 100%;
     z-index: 10;
+    padding: 10px;
 
     background: rgb(243, 255, 238);
     box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.25);
+  }
+
+  #nickname-form {
+    display: flex;
+    flex-direction: column;
+
+    & button,
+    & input {
+      padding: 5px 10px;
+    }
+
+    & input {
+      outline: none;
+    }
+
+    & button {
+      align-self: center;
+      margin: 5px 0;
+      border: none;
+      border-radius: 5px;
+      background: rgb(0, 102, 255);
+      transition: all 0.3s ease;
+      color: white;
+      font-weight: 500;
+
+      &:hover {
+        background: rgba(0, 102, 255, .8);
+      }
+    }
   }
 
   .chat-container {
@@ -25,17 +57,45 @@
     display: flex;
     flex-direction: column;
 
+    & div {
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+      padding: 10px 0;
+      display: flex;
+      justify-content: center;
+    }
+
     .chat-messages {
       flex-grow: 1;
-      width: 100%;
+      padding: 10px;
+      list-style: none;
+
+      .nickname {
+        font-weight: 600;
+      }
     }
 
     .chat-message-form {
-      width: 100%;
-      height: 100px;
+      height: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
 
       background: #fff;
-      box-shadow: -2px 0px 2px rgba(0, 0, 0, 0.25);
+      box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.25);
+
+      & input {
+        flex: 1;
+        align-self: stretch;
+        border: 2px solid rgba(0, 0, 0, 0.25);
+        outline: none;
+        padding: 5px;
+      }
+
+      & button {
+        padding: 4px 10px;
+        margin: 0 5px;
+        align-self: stretch;
+      }
     }
   }
 }
