--- a/public/styles/formToMessage.css
+++ b/public/styles/formToMessage.css
@@ -5,7 +5,7 @@ h1 {
 form {
   display: grid;
   gap: 15px;
-  grid-template: 1fr 50px auto 50px;
+  grid-template: 1fr 50px / auto 50px;
   grid-template-areas: 'n n' 'm b';
   padding: 25px;
   width: 100%;
