criacao da estrutura do back end com o endpoint das mensagens

--- a/views/view.html
+++ b/views/view.html
@@ -14,6 +14,7 @@
   <input type="text" data-testid="message-box" id="text-input"/>
   <button type="button" data-testid="send-button" id="send-button">Enviar</button>
   <script src="/socket.io/socket.io.js"></script>
+  <script src="./scripts.js"></script>
   <script>
     const socket = io('http://localhost:3000');
 
