--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -31,7 +31,7 @@
         </div>
         <div class="online-users">
           <h3>Usuários Online</h3>
-          </ul id="users"></ul>
+          <ul id="usersOnline"></ul>
         </div>
       </div>
       <div class="messages-container">
@@ -65,8 +65,6 @@
       const socket = io();
       
       const messageBoxList = document.getElementById('messages');
-      const sendMessageBtn = document.getElementById('send-button');
-      
       const insertMessage = (message) => {
         const li = document.createElement('li');
         li.setAttribute('data-testid', 'message');
@@ -74,6 +72,7 @@
         messageBoxList.appendChild(li);
       };
       
+      const sendMessageBtn = document.getElementById('send-button');
       sendMessageBtn.addEventListener('click', () => {
         const nickname = socket.id.substr(0, 15);
         const chatMessage = document.getElementById('message-box').value;
@@ -81,7 +80,22 @@
         document.getElementById('message-box').value = '';
       });
       
-      socket.on('message', async (message) => await insertMessage(message));
+      const onlineUsers = document.getElementById('usersOnline');
+      const insertOnlineUser = (nickname) => {
+        const li = document.createElement('li');
+        li.setAttribute('data-testid', 'online-user');
+        li.innerText = nickname;
+        onlineUsers.appendChild(li);
+      }
+
+      const changeNickname = document.getElementById('nickname-button');
+      changeNickname.addEventListener('click', () => {
+        newNickname = document.getElementById('nickname-box').value;
+        socket.emit('changeNickname', newNickname);
+      });
+      
+      socket.on('userOnline', (userId) => insertOnlineUser(userId));
+      socket.on('message', (message) => insertMessage(message));
       
       </script>
   </body>
