--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,8 @@
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
   font-family: Roboto, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -12,78 +12,78 @@ body {
 }
 
 .container {
-  max-width: 1200px;
-  height: 100vh;
-  margin: 0 auto;
+  align-items: center;
   border: 1px solid black;
-
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 100vh;
   justify-content: space-around;
+  margin: 0 auto;
+  max-width: 1200px;
+
 }
 
 .sub-container {
-  width: 1200px;
-  height: 500px;
+  align-items: center;
   border: 1px solid red;
   display: flex;
-  align-items: center;
+  height: 500px;
   justify-content: space-between;
+  width: 1200px;
 }
 
 .users-board-container {
+  align-items: center;
   border: 1px solid black;
-  width: 500px;
-  height: 500px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 500px;
   justify-content: flex-start;
+  width: 500px;
 }
 
 .users-board-input-container {
-  width: 80%;
-  display: flex;
-  margin: 25px 0;
   align-items: center;
+  display: flex;
   justify-content: center;
+  margin: 25px 0;
+  width: 80%;
 }
 
 .users-board-input-container input {
-  width: 80%;
-  height: 30px;
   border: none;
   border-radius: 10px;
+  height: 30px;
   margin-right: 10px;
+  width: 80%;
 }
 
 .users-board {
-  border: 1px solid black;
   background: white;
-  width: 400px;
+  border: 1px solid black;
   height: 200px;
+  width: 400px;
 }
 
 .messages {
-  border: 1px solid black;
-  width: 500px;
-  height: 500px;
-  display: flex;
   align-items: center;
+  border: 1px solid black;
+  display: flex;
+  height: 500px;
   justify-content: center;
+  width: 500px;
 }
 
 .messages-board {
-  border: 1px solid black;
+  align-items: center;
   background: white;
-  width: 100%;
-  height: 100%;
+  border: 1px solid black;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 100%;
   justify-content: center;
   overflow: scroll;
+  width: 100%;
 }
 
 .messages-board ul {
@@ -91,11 +91,11 @@ body {
 }
 
 .messages-board li {
-  color: white;
   background-color: goldenrod;
-  border-radius: 0 25px 25px 25px;
+  border-radius: 0 25px 25px;
+  color: white;
+  margin: 0 0 20px;
   padding: 5px 100px;
-  margin: 0 0 20px 0;
 }
 
 .send-message {
@@ -104,9 +104,9 @@ body {
 }
 
 .send-message input {
-  width: 80%;
-  height: 30px;
   border: none;
   border-radius: 10px;
+  height: 30px;
   margin-right: 10px;
+  width: 80%;
 }
