--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,45 +4,48 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
+  <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+  <link rel="stylesheet" href="style.css">
   <title>WebChat</title>
 </head>
 <body>
-  <fieldset>
-    <div>
-      <span id="userName">Hello </span>
-      <input
-        type="text"
-        id="nickInput"
-        placeholder="Change your nickname"
-        data-testid="nickname-box"
-      >
-      <button
-        id="nickBtn"
-        data-testid="nickname-button"
-      >
-      Submit
-      </button>
-    </div>
-  </fieldset>
-  <ul id="messagesField"></ul>
-  <div id="chat">
+  <div id="chat" class="chatField">
     <input
       type="text"
-      id="messageText"
+      id="nickInput"
+      placeholder="Insert your nickname here"
+      data-testid="nickname-box"
+      autocomplete="off"
+    >
+    <button
+      id="nickBtn"
+      data-testid="nickname-button"
+      class="button"
+    >
+    Submit
+    </button>
+    <ul id="userList">
+      <li>user here:</li>
+    </ul>
+    <ul id="messagesField" class="messagesField">
+      <li>message here:</li>
+    </ul>
+    <input
+      type="text"
+      id="messageInput"
       name="message-box"
       data-testid="message-box"
       placeholder="Type a message"
       autocomplete="off"
     />
-    <div class="messages"></div>
     <button
       name="send-button"
       data-testid="send-button"
-      id="sendButton"
+      id="sendMessageBtn"
+      class="button"
     >
       Send
   </div>
-  <script src="./webChat.js"></script>
+  <script src="webChat.js"></script>
 </body>
 </html>
