--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,12 @@
     <title>Socket.IO - trybe</title>
   </head>
   <body>
+    <h3 data-testid="online-user"></h3>
+    <input type="text" id="newNickname" data-testid="nickname-box">
+    <button id="addNickname" data-testid="nickname-button">new nickname</button>
     <form action="">
-      <input id="nickname" autocomplete="off" />
-      <input id="messageInput" autocomplete="off" /><button>Send</button>
+      <input id="messageInput" data-testid="message-box" />
+      <button data-testid="send-button">Send</button>
     </form>
     <ul id="messages"></ul>
     <script src="/socket.io/socket.io.js"></script>
@@ -14,13 +17,25 @@
       const socket = io();
       const form = document.querySelector('form');
       const inputMessage = document.querySelector('#messageInput');
-      const nickname = document.querySelector('#nickname');
+      const addNickname = document.querySelector('#addNickname');
+      const nickname = document.querySelector('h3');
+
+      socket.on('idNickname', (id) => {
+        nickname.innerText = id;
+        return false;
+      });
+
+      addNickname.addEventListener('click', () => {
+        const newNickname = document.querySelector('#newNickname');
+        nickname.innerText = newNickname.value;
+      });
 
       form.addEventListener('submit', (e) => {
         e.preventDefault();
+        const nickname = document.querySelector('h3');
         const msg = {
           chatMessage: inputMessage.value,
-          nickname: nickname.value,
+          nickname: nickname.innerText,
         };
         socket.emit('message', msg);
         inputMessage.value = '';
@@ -30,6 +45,7 @@
       const createMessage = (message) => {
         const messagesUl = document.querySelector('#messages');
         const li = document.createElement('li');
+        li.setAttribute('data-testid', 'message');
         li.innerText = message;
         messagesUl.appendChild(li);
         return false;
