--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
   <body>
     <section class="main">
       <div class="side-bar">
-        <form action="" id="nickname-form">
+        <form action="" class="nickname-form" id="nickname-form">
           <input
             type="text"
             id="nickname-input"
