--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,98 +1,76 @@
 * {
+  box-sizing: content-box;
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: Roboto, sans-serif;
 }
 
 .main {
-  width: 100%;
-  height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
+  height: 100vh;
+  width: 100%;
 }
 
 .main .side-bar {
+  background: #f3ffee;
+  box-shadow: 1px 0 2px rgba(0, 0, 0, 0.25);
+  padding: 10px;
   width: 300px;
   z-index: 10;
-  padding: 10px;
-  background: #f3ffee;
-  -webkit-box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.25);
-          box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.25);
 }
 
-.main #nickname-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.nickname-form {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
-.main #nickname-form button,
-.main #nickname-form input {
+.main .nickname-form button , .main .nickname-form input {
   padding: 5px 10px;
 }
 
-.main #nickname-form input {
+.main .nickname-form input {
   outline: none;
 }
 
-.main #nickname-form button {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  margin: 5px 0;
+.main .nickname-form button {
+  align-self: center;
+  background: #06f;
   border: none;
   border-radius: 5px;
-  background: #0066ff;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
   color: white;
   font-weight: 500;
+  margin: 5px 0;
+  transition: all 0.3s ease;
 }
 
-.main #nickname-form button:hover {
+.main .nickname-form button:hover {
   background: rgba(0, 102, 255, 0.8);
 }
 
 .main .chat-container {
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
 }
 
 .main .chat-container div {
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
-          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
-  padding: 10px 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  padding: 10px 0;
 }
 
 .main .chat-container .chat-messages {
   -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  padding: 10px;
+  flex-grow: 1;
+  -ms-flex-positive: 1;
   list-style: none;
+  padding: 10px;
 }
 
 .main .chat-container .chat-messages .nickname {
@@ -100,38 +78,26 @@ body {
 }
 
 .main .chat-container .chat-message-form {
-  height: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  background: white;
   -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  background: #fff;
-  -webkit-box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.25);
-          box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.25);
+  display: flex;
+  -ms-flex-align: center;
+  -ms-flex-pack: space-evenly;
+  height: 30px;
+  justify-content: space-evenly;
 }
 
 .main .chat-container .chat-message-form input {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  -ms-flex-item-align: stretch;
-      -ms-grid-row-align: stretch;
-      align-self: stretch;
+  align-self: stretch;
   border: 2px solid rgba(0, 0, 0, 0.25);
+  flex: 1;
   outline: none;
   padding: 5px;
 }
 
 .main .chat-container .chat-message-form button {
-  padding: 4px 10px;
+  align-self: stretch;
   margin: 0 5px;
-  -ms-flex-item-align: stretch;
-      -ms-grid-row-align: stretch;
-      align-self: stretch;
+  padding: 4px 10px;
 }
-/*# sourceMappingURL=index.css.map */
