--- a/public/chat.css
+++ b/public/chat.css
@@ -5,7 +5,8 @@
 }
 
 body {
-  font: 13px Helvetica, Arial;
+  font: 13px;
+  font-family: Helvetica, Arial;
 }
 
 form {
@@ -25,8 +26,8 @@ form input {
 
 form button {
   background: rgb(130, 224, 255);
-  cursor: pointer;
   border: none;
+  cursor: pointer;
   padding: 10px;
   width: 9%;
 }
@@ -48,9 +49,9 @@ form button {
 #box-message {
   border: 1px solid #666;
   min-height: 200px;
-  overflow-y: auto;
-  overflow:auto;
+  overflow: auto;
   overflow-x: hidden;
+  overflow-y: auto;
   width: 80%;
 }
 
@@ -58,7 +59,7 @@ form button {
   border: 1px solid #666;
   min-height: 200px;
   overflow-y: auto;
-  overflow:auto;
+  overflow: auto;
   overflow-x: hidden;
   width: 80%;
 }
@@ -73,6 +74,6 @@ form button {
   padding: 5px 10px;
 }
 
-#clients li:nth-child(odd) {
+#clients li:nth-child( odd ) {
   background: #eee;
 }
