feat: transmite a atualizaçao do nickname para todos os users

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div>
-      <form id="changeCurrentNickname">
+      <form id="formToChoiceNickname">
         <input type="text" placeholder="Insira seu nome" data-testid="nickname-box" id="nickname-box">
         <button type="submit" data-testid="nickname-button">Salvar</button>
       </form>
