feat: insere no banco de  dados as msgs do chat

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -20,9 +20,11 @@
 
     <div>
       <ul id="messagesList">
-        <% oldMessages.forEach((oldMessage) => { %>
-          <li data-testid="message"><%= oldMessage %></li>
-        <% }) %>
+        <% if(oldMessages.length > 0){%>
+          <% oldMessages.forEach((oldMessage) => { %>
+            <li data-testid="message"><%= oldMessage %></li>
+          <% }) %>
+        <% }%>
       </ul>
     </div>
 
