--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js"></script>
   </head>
   <body>
-    <h1>Vini Chat!!!</h1>
+    <h1 class="header"></h1>
     <div class="middle-items">
       <div class="side-intems">
         <form action="" class="nickname-form">
@@ -31,6 +31,7 @@
       </div>
       <ul class="chat"></ul>
     </div>
+    <p data-testid="online-user" class="userID"></p>
     <form action="" class="form-msg">
       <input
         class="msgInput"
