--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,13 @@
           </ul>
         </div>
       </div>
-      <ul class="chat"></ul>
+      <ul class="chat">
+        <%messageHistory.forEach(({ message, nickname, timestamp }) => {%>
+          <li data-testid="message">
+            <%=`${timestamp} - ${nickname}: ${message}`%> 
+          </li>
+        <%});%>   
+      </ul>
     </div>
     <p data-testid="online-user" class="userID"></p>
     <form action="" class="form-msg">
