add list online users logic

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,8 +24,8 @@
             Save
           </button>
         </form>
-        <div class="user-list">
-          <ul>
+        <div>
+          <ul class="userList">
           </ul>
         </div>
       </div>
