--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <h2 data-testid="online-user" class="online-user"></h2>
+  <ul class="online-user">
+  </ul>
 
 
   <form action="" class="nickname-form">
