req4 almost done

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
         <%});%>   
       </ul>
     </div>
-    <p data-testid="online-user" class="userID"></p>
+    <p class="userID"></p>
     <form action="" class="form-msg">
       <input
         class="msgInput"
