--- a/public/chat.css
+++ b/public/chat.css
@@ -17,7 +17,7 @@ form {
   width: 100%;
 }
 
-#form-msg input {
+#form-msg {
   border: 0;
   margin-right: 0.5%;
   padding: 10px;
@@ -32,7 +32,7 @@ form {
   width: 9%;
 }
 
-#clients li {
+#clients {
   list-style-type: none;
   padding: 5px 10px;
 }
@@ -41,7 +41,7 @@ form {
   background: rgb(157, 211, 140);
 }
 
-#box-clients ul {
+#box-clients {
   border: 1px solid #666;
   min-height: 200px;
   overflow: auto;
@@ -50,7 +50,7 @@ form {
   width: 80%;
 }
 
-#mensagem li {
+#mensagem {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -61,7 +61,7 @@ form {
   background: rgb(252, 131, 131);
 }
 
-#box-message ul {
+#box-message {
   border: 1px solid rgb(158, 152, 196);
   min-height: 200px;
   overflow: auto;
