--- a/public/chat.css
+++ b/public/chat.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
 }
 
 body {
@@ -11,14 +11,14 @@ body {
 
 form {
   background: black;
-  bottom: 0;
+  /* bottom: 0; */
   padding: 3px;
   position: fixed;
   width: 100%;
 }
 
-#form-msg {
-  border: 0;
+#form-msg input {
+  /* border: 0; */
   margin-right: 0.5%;
   padding: 10px;
   width: 90%;
@@ -32,7 +32,7 @@ form {
   width: 9%;
 }
 
-#clients {
+#clients li {
   list-style-type: none;
   padding: 5px 10px;
 }
@@ -41,7 +41,7 @@ form {
   background: rgb(157, 211, 140);
 }
 
-#box-clients {
+#box-clients ul {
   border: 1px solid #666;
   min-height: 200px;
   overflow: auto;
@@ -50,10 +50,10 @@ form {
   width: 80%;
 }
 
-#mensagem {
+#mensagem li {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
   padding: 5px 10px;
 }
 
@@ -61,7 +61,7 @@ form {
   background: rgb(252, 131, 131);
 }
 
-#box-message {
+#box-message ul {
   border: 1px solid rgb(158, 152, 196);
   min-height: 200px;
   overflow: auto;
