--- a/public/chat.css
+++ b/public/chat.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
-  /* margin: 0;
-  padding: 0; */
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -11,7 +11,7 @@ body {
 
 form {
   background: black;
-  /* bottom: 0; */
+  bottom: 0;
   padding: 3px;
   position: fixed;
   width: 100%;
@@ -52,8 +52,8 @@ form {
 
 #mensagem li {
   list-style-type: none;
-  /* margin: 0;
-  padding: 0; */
+  margin: 0;
+  padding: 0;
   padding: 5px 10px;
 }
 
