--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-  <ul class="online-user">
-  </ul>
+  <ul class="online-user-list"></ul>
 
 
   <form action="" class="nickname-form">
@@ -23,9 +22,7 @@
     <button data-testid="send-button" type="submit">Enviar</button>
   </form>
 
-  <ul class="list-message">
-
-  </ul>
+  <ul class="list-message"></ul>
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="../scripts/webchat.js"></script>
