--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,39 +10,44 @@
 </head>
 <body>
   <div id="chat" class="chatField">
-    <input
-      type="text"
-      id="nickInput"
-      placeholder="Insert your nickname here"
-      data-testid="nickname-box"
-      autocomplete="off"
-    >
-    <button
-      id="nickBtn"
-      data-testid="nickname-button"
-      class="button"
-    >
-    Submit
-    </button>
-    <ul id="userList">
+    <div class="nicknameField">
+      <input
+        type="text"
+        id="nickInput"
+        placeholder="Insert your nickname here"
+        data-testid="nickname-box"
+        autocomplete="off"
+      >
+      <button
+        id="nickBtn"
+        data-testid="nickname-button"
+        class="button"
+      >
+      Submit
+      </button>
+    </div>
+    <ul id="userList" class="userList">
     </ul>
     <ul id="messagesField" class="messagesField">
     </ul>
-    <input
-      type="text"
-      id="messageInput"
-      name="message-box"
-      data-testid="message-box"
-      placeholder="Type a message"
-      autocomplete="off"
-    />
-    <button
-      name="send-button"
-      data-testid="send-button"
-      id="sendMessageBtn"
-      class="button"
-    >
-      Send
+    <form>
+      <input
+        type="text"
+        id="messageInput"
+        name="message-box"
+        data-testid="message-box"
+        placeholder="Type a message"
+        autocomplete="off"
+      />
+      <button
+        name="send-button"
+        data-testid="send-button"
+        id="sendMessageBtn"
+        class="button"
+        type="submit"
+      >
+        Send
+    </form>
   </div>
   <script src="webChat.js"></script>
 </body>
